Fixed issue where story box would be cutoff on mobile

--- a/src/containers/NFTView/NFTView.module.css
+++ b/src/containers/NFTView/NFTView.module.css
@@ -368,7 +368,6 @@
 		top: 0;
 		position: relative;
 		display: block;
-		max-height: 200px;
 	}
 	.Details {
 		flex-direction: column;
